Archive2/55/7be25a7ab19089/output
main.cpp: In function 'int main()':
main.cpp:9:15: error: ISO C++ forbids variable length array 'a' [-Wvla]
     int a[x][y] = {};
               ^
main.cpp:9:15: error: ISO C++ forbids variable length array 'a' [-Wvla]
